public static class EnemyAnimationStrings
{
    public const string IsGrounded = "IsGrounded";
    public const string IsMoving = "IsMoving";
    public const string IsHasTarget = "IsHasTarget";
    public const string IsAttacking = "IsAttacking";
    public const string HitTrigger = "HitTrigger";
    public const string IsAlive = "IsAlive";
    public const string IsTrapped = "IsTrapped";
}
